[Shubham]Updated: UI design updated

--- a/src/components/display/display.scss
+++ b/src/components/display/display.scss
@@ -3,6 +3,9 @@
   border-collapse: collapse;
   min-width: 800px;
   tr {
+    background: #42515F 0% 0% no-repeat padding-box;
+    border-radius: 3px 3px 0px 0px;
+    opacity: 1;
     min-width: 100%;
     td,
     th {
