--- a/src/components/payroll-form/payroll-form.scss
+++ b/src/components/payroll-form/payroll-form.scss
@@ -124,14 +124,51 @@
           margin-right: 10px;
           border: 1px solid #707070;
           margin-left: 15px;
+          
+          
+      }
+      .submitButton:hover {
+        text-align: center;
+        font: normal normal normal 20px/26px Roboto;
+        letter-spacing: 0px;
+        color: #FFFFFF;
+        opacity: 1;
+        background: #82A70C 0% 0% no-repeat padding-box;
+         border: 1px solid #969696;
+         border-radius: 5px;
+opacity: 1;
       }
       .resetButton {
           border: none;
           border: 1px solid #707070;
       }
+      .resetButton:hover {
+        text-align: center;
+        font: normal normal normal 20px/26px Roboto;
+        letter-spacing: 0px;
+        color: #FFFFFF;
+        opacity: 1;
+        background: #707070 0% 0% no-repeat padding-box;
+        border: 1px solid #969696;
+        border-radius: 5px;
+        opacity: 1;
+      }
       .cancelButton {
         text-decoration: none;
         text-align: center;
+      }
+      .cancelButton:hover {
+        background-color: red;
+        background: #707070 0% 0% no-repeat padding-box;
+        border: 1px solid #969696;
+        border-radius: 5px;
+        opacity: 1;
+        text-align: center;
+        font: normal normal normal 20px/26px Roboto;
+        letter-spacing: 0px;
+        color: #FFFFFF;
+        opacity: 1;
+        
       }
 
       label {
